# terminal-lifeform

./: .gitignore  LICENSE  README.md  profile.out  pyproject.toml  requirements.txt
docs/: NEXTSTEPS.md
logs/: sim_totals.json  sim_totals.txt  trait_evolution.json  trait_tracker.json
src/: entity.py  entity_utils.py  enviroment.py  events.py  handlers.py  logging_config.py  main.py  params.py  sim.py  stats.py
src/tests/: passive_aggressive.py  test_compare_totals.py  test_list_words.py  test_list_worlds.py
src/utils/: entity_utils.py  logging_config.py  plot_summary.py  plot_traits.py  utils.py  world_loader.py
